@@ -1,3 +1,9 @@
+2008-03-14  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	* swank.lisp (classify-symbol, symbol-classification->string): Add
+	classification of symbols denoting type specifier, and denoting
+	constants.
+	
 2008-03-13  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	* slime.el (slime-eval-macroexpand): Indent expansion.
